# precis-mcp

./: .dockerignore  .gitignore  .mcp.json  .pre-commit-config.yaml  .test-results.xml  .testmondata-shm  .windsurfrules  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  LICENSE  OPEN-ITEMS.md  README.md  SECURITY.md  git-town.toml  pyproject.toml  tailwind.config.js
.claude/: settings.json
.claude/agents/: cluster-admin.md  cluster-ops.md  cmd-runner.md  coder.md  dep-bumper.md  documenter.md  extract.md  forensics.md  gripe-filer.md  housekeeper.md  issue-closer.md  navigator.md  ready.md  reviewer.md  scaffold.md  test-author.md  test-runner.md  tidy.md
.claude/commands/: endsession.md  go.md  land.md  next.md  rebase.md  whatneedsdoing.md  workspace-cleanup.md
.claude/workflows/: coder-chain.js
.devin/workflows/: go.md  land.md  whatneedsdoing.md
.github/workflows/: check.yml  publish.yml
data/oracle/: chengyu.yaml  engineering.yaml  iching.yaml  proverbs-euro.yaml  stoic.yaml  talmudic.yaml  zen.yaml
deploy/: README.md  ansible.cfg  bootstrap-macos.yml  bootstrap-tailscale.yml  reconcile.sql  redeploy-precis.yml  run-fix-metadata.yml  run-migrate-refs.yml  run-reconcile.yml  site.yml
deploy/inventory.example/: hosts.example.yml
deploy/playbooks/: 00-users.yml  01-nfs.yml  02-postgres.yml  03-redis.yml  04-llamacpp.yml  04-ollama.yml  05-autofs.yml  06-litellm.yml  08-monitoring.yml  09-nginx.yml  10-hardening.yml  10a-tcc-profile.yml  11-backups.yml  12-config-pull.yml  13-ansible-callback.yml  14-mcps.yml  15-logrotate.yml  16-api-monitors.yml  17-ssh-tunnels.yml  18-node-exporter.yml  19-pgpass.yml  19a-precis-embedder.yml  20-precis-worker.yml  20b-precis-worker-collapsed.yml  21-daily-briefing.yml  22-papers-sync.yml  22-sortie.yml  25-alchemi.yml  27-extract-watch.yml  28-precis-watch.yml  29-claude-code.yml  30-precis-anki-sync.yml  30-precis-cron-tick.yml  31-asa-bot.yml  32-precis-dream.yml  37-precis-worker-agent.yml  38-precis-web.yml  39-precis-watch-poll.yml  40-precis-heartbeat.yml  40-precis-reconcile.yml  (+12 more)
deploy/tasks/: reload_launchd.yml
docker/: Dockerfile  agent-mcp.json  bake-models.py  docker-entrypoint.sh
docker/aizynth/: Dockerfile  az_to_route.py  precis-aizynth-run
docker/code-search/: compose.yaml
docker/normalizer/: Dockerfile  to_route.py
docker/remarkable/: Dockerfile  README.md  precis-remarkable-run
docker/tts/: Dockerfile  README.md  precis-tts-run
docs/: README.md  architecture.md  codebase.md  edit-protocol-spec.md  file-kinds-unified-addressing.md  filing-kind-proposal.md  goal-kind-plan.md  how-to-setup-like-this.md  mcp-critic-review-2026-05-02.md  mcp-smoke-test-plan.md  mission.md  patent-drafting-merge.md  patent-kind-spec.md  phase3-plan.md  phase3.5-plan.md  phase6-plan.md  plugin-architecture.md  plugin-authoring.md  provenance-kind-plan.md  pycode-kind-spec.md  python-kind-spec.md  search-future-filters.md  seven-verb-surface-migration.md  stochastic-kinds-plan.md  store_sketch.py  v2-cutover.md  voice-kind-spec.md  websites-plan.md
docs/architecture/: glossary.md  state-map.md
docs/conventions/: code-anchors.md  container-ops.md  dark-switches.md  discovery-layer-policy.md  env-vars.md  kind-enablement.md  llm-facing-prose.md  rtk.md  testing.md  thresholds.md
docs/decisions/: 0001-merge-acatome-into-precis.md  0002-pub-id-and-toon.md  0003-shared-tool-registry.md  0004-multi-stage-dockerfile.md  0005-greenfield-migrations.md  0006-tri-identifier-scheme.md  0007-derived-queue-no-block-jobs.md  0008-drop-slug-identifier-normalisation.md  0009-derived-queue-family.md  0009-dockerfile-relocation-container-first.md  0010-postgres-pgvector-system-of-record.md  0011-claude-in-dev-image.md  0012-bake-models-into-runtime-image.md  0013-mcp-session-context-env-vars.md  0014-pdf-metadata-writeback.md  0015-marker-leak-mitigation.md  0016-advisory-lock-claims.md  0017-derived-queue-family.md  0018-persistent-discovery-layer.md  0019-premodels-build-context.md  0019-second-greenfield.md  0020-embedder-as-service.md  0021-image-split-serve-worker-ingest.md  0022-independent-worker-queues.md  0023-dreamable-no-clustering-dep.md  0024-dream-loop-litellm-inprocess.md  0025-in-place-reconcile-not-third-greenfield.md  0026-precis-web-surface.md  0027-reparent-via-parent-link.md  0028-host-heartbeat-telemetry.md  0029-multi-root-corpus-pdf.md  0030-job-finding-cron-stay-separate.md  0031-baseline-snapshot-dual-track.md  0032-precis-skills-plugin-group.md  0036-universal-handles.md  (+31 more)
scripts/: .doi_status.json  README.md  _common.py  _doilist.py  _enrich_paper_identifiers.py  _find_citing_papers.py  _h2_experiment.py  _paper_count.py  _paper_monitor_ingest_dir.py  _perplexity_monitor_ingest_dir.py  _retrofit_acatome_external_ids.py  backlog-lint  build-all  build-image  bump  cad_tessellate_parity.mjs  code-index  coderef  db  db-thrash-review  deploy  dev  docs-orphans  doilist  enrich-paper-identifiers  find-citing-papers  fixer-tick  gen-schema  inflight  memory-lint  migrate_cron_to_recurring.py  migrate_to_oracle.py  migration-check  nightly  nightly-timer  paper-count  paper-monitor-ingest-dir  perplexity-monitor-ingest-dir  precis-add  precis-embed  (+13 more)
tests/: conftest.py  test_abbreviations.py  test_abstract_preview.py  test_academic_styles.py  test_ack_dedup.py  test_acquire.py  test_agent_container.py  test_agentlog.py  test_alerts.py  test_angle.py  test_angle_dispatch.py  test_angle_search.py  test_anki.py  test_anki_fix.py  test_anki_project.py  test_anki_sync.py  test_asa_claude_invoke.py  test_asa_oauth.py  test_asa_preamble.py  test_asa_slack_config.py  test_asa_slack_conv_slug.py  test_asa_slack_identity.py  test_asa_slack_kind_policy.py  test_asa_split_for_discord.py  test_audio_feed.py  test_authors.py  test_auto_check.py  test_backfill.py  test_backlog_groom.py  test_block_ingest.py  test_block_search.py  test_blocks.py  test_boilerplate.py  test_book_handler.py  test_briefing_audio.py  test_briefing_cast.py  test_briefing_retry.py  test_budget.py  test_cache_base.py  test_cache_state.py  (+436 more)
(+1562 files in other folders)
