[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "precis-mcp"
version = "8.6.0"
description = "MCP server giving LLM agents a seven-verb API over papers, documents, code, personal state, patents, and cached web/Wolfram/YouTube tool calls — backed by PostgreSQL + pgvector"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
authors = [{ name = "Reto Stamm", email = "reto@retostamm.com" }]
keywords = [
    "mcp",
    "mcp-server",
    "model-context-protocol",
    "llm",
    "ai-agent",
    "agent-tools",
    "context-management",
    "token-optimization",
    "progressive-disclosure",
    "scientific-papers",
    "pdf",
    "markdown",
    "latex",
    "docx",
    "python",
    "code-navigation",
    "ast",
    "callgraph",
    "semantic-search",
    "pgvector",
    "postgres",
    "patents",
    "wolfram-alpha",
    "perplexity",
    "youtube-transcripts",
    "spaced-repetition",
    "claude",
    "cursor",
    "windsurf",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Text Processing :: Markup",
    "Topic :: Text Processing :: Markup :: LaTeX",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "mcp[cli]>=1.0",
    "psycopg[binary,pool]>=3.2",
    "pgvector>=0.3.0",
    "pydantic-settings>=2.0",
    "platformdirs>=4.0",
    "pyyaml>=6.0",
    # Mojibake repair on Marker / fitz output. Used both by the paper
    # ingest pipeline (vendored from acatome-extract in B3/B4) and the
    # patent ingest path. Direct dep so the package keeps resolving
    # without the optional ``[paper]`` extra installed.
    "ftfy>=6.3",
    # File-system watcher backing ``precis watch``. Used to be pulled
    # in transitively via acatome-extract[embeddings]; promoted to a
    # direct dep in B8 now that the watch loop lives in this package
    # (`precis/cli/watch.py`).
    "watchdog>=4.0",
    # Line editor backing ``precis repl``. Pure-Python; gives arrow-key
    # movement, persistent history, and tab completion of verb / param
    # names without depending on system libreadline (the slim runtime
    # image doesn't ship it, so the prior readline-based REPL silently
    # fell back to no-editing input()).
    "prompt-toolkit>=3.0",
    # Transitive-dep security floor — DO NOT add Pillow>=12.2.0 or
    # markdownify>=1.2 here without first bumping marker-pdf upstream.
    # As of 2026-05, marker-pdf 1.10.2 hard-caps Pillow<11.0.0 and
    # pulls markdownify<0.13.1; trying to pin Pillow>=12.2.0 here
    # makes precis-mcp[all] unresolvable. The pillow alerts (PSD,
    # FITS, PDF) and markdownify headline-DoS aren't reachable from
    # precis-mcp directly — paper ingestion sandboxes Marker behind
    # the ``[paper]`` extra. Tracked in dependabot.
]

[project.urls]
Homepage = "https://github.com/retospect/precis-mcp"
Repository = "https://github.com/retospect/precis-mcp"

[project.optional-dependencies]
# The embedder backend — ``sentence-transformers`` (and, transitively,
# ``torch``). Split out of ``paper`` (ADR 0020/0021) so the torch-free
# serve / worker images can omit it and reach the model over HTTP via
# ``RemoteEmbedder`` instead. The embedder *service* image installs this
# extra; single-process PyPI installs that want an in-process model get
# it via ``[all]`` or an explicit ``[embed]``.
#
# Without an embedder (no ``[embed]`` and no remote URL) the ``search()``
# verb on every embedder-backed kind crashes with -32603 even though
# tools/list advertises it (MCP critic CRITICAL). ``[all]`` includes
# ``embed`` so the single-process install keeps working.
embed = ["sentence-transformers>=3.0"]
# Paper ingest — PDF → layout (marker-pdf) → chunks + metadata
# lookup (CrossRef / Semantic Scholar). The full pipeline lives in
# :mod:`precis.ingest` as of the v7 rewrite (was previously farmed out
# to ``acatome-extract``).
#
# ``marker-pdf`` is gated on ``sys_platform != 'win32'`` because
# Marker's surya / torch stack doesn't support Windows; on Windows
# the install resolves but PDF layout extraction will error out at
# call time with a clear ``ModuleNotFoundError: marker``.
paper = [
    "marker-pdf>=1.0; sys_platform != 'win32'",
    "pymupdf>=1.24.10",     # ``fitz`` — page-level PDF text + metadata.
                            # >=1.24.10 picks up the heap-corruption
                            # fixes shipped in the 1.24 maintenance
                            # series; agent-supplied PDFs reach
                            # fitz.open via the OA cascade so we keep
                            # the floor tight.
    "rapidfuzz>=3.0",       # title/author fuzzy match in verify_metadata
    "habanero>=2.0",        # CrossRef REST client
    "semanticscholar>=0.8", # Semantic Scholar REST client
    "tenacity>=8.0",        # retry decorator on the S2 + CrossRef paths
    "pysbd>=0.3.4",         # abbreviation-aware sentence splitter for
                            # scientific prose; underpins central-sentence
                            # extraction + replaces the naive ". "
                            # fallback in text_chunker.
    # NOTE: ``sentence-transformers`` is NOT here — it moved to the
    # ``embed`` extra (ADR 0021). Marker still pulls ``torch`` for surya,
    # so the ingest image is heavy regardless; serve / worker, which omit
    # both ``paper`` and ``embed``, are the ones that go torch-free.
]
# DOCX file handler.
docx = ["python-docx>=1.1", "lxml>=5.0"]
# LaTeX file handler.
tex = ["lxml>=5.0"]
# Local calculator (sympy).
calc = ["sympy>=1.12"]
# Declarative matplotlib plot renderer.
plot = ["matplotlib>=3.7", "pydantic>=2.0"]
# Paid web tools (perplexity / wolfram / youtube transcripts).
external = [
    "wolframalpha>=5.0",
    "youtube-transcript-api>=1.0",
    "httpx>=0.27",
    "trafilatura>=1.6",  # web page → markdown extractor
]
# Patent kind — EPO Open Patent Services. Free fair-use, OAuth2.
patent = [
    "python-epo-ops-client>=4.0",
    "lxml>=5.0",
]
all = ["precis-mcp[embed,paper,docx,tex,calc,plot,external,patent]"]

[project.scripts]
precis = "precis.cli:main"

# V2 drops entry-point handler discovery in favour of an in-tree
# `BUILTINS` registry list. No `precis.file_types` / `precis.schemes`
# groups.

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.11",
    "mypy>=1.15",
    "pre-commit>=4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/precis"]

# Source distribution includes docker/ so packagers / downstream image
# builders get the Dockerfile and entrypoint alongside the Python source
# (`pip download --no-binary precis-mcp` lands a tarball with both).
# tests/ ships so downstream can verify; docs/ ships so the ADRs travel
# with the release. The wheel above stays src/precis only — Dockerfiles
# aren't useful inside an installed package and would just bloat
# every `pip install`.
[tool.hatch.build.targets.sdist]
include = [
  "src/",
  "tests/",
  "docker/",
  "docs/",
  "scripts/",
  "*.md",
  "*.toml",
  "LICENSE",
  "CITATION.cff",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "B008",    # function-call-in-default-argument (typer pattern)
    "E501",    # line-too-long (formatter handles what it can)
    "E741",    # ambiguous-variable-name
    "RUF001",  # ambiguous-unicode-character-string
    "RUF002",  # ambiguous-unicode-character-docstring
    "RUF003",  # ambiguous-unicode-character-comment
    "RUF012",  # mutable-class-default (SQLAlchemy/Pydantic models)
    "SIM102",  # collapsible-if
    "SIM103",  # needless-bool
    "SIM105",  # suppressible-exception
    "SIM108",  # if-else-block-instead-of-if-exp
    "SIM110",  # reimplemented-builtin
    "SIM117",  # multiple-with-statements
    "B007",    # unused-loop-control-variable
    "B905",    # zip-without-explicit-strict
    "RUF005",  # collection-literal-concatenation
    "RUF006",  # asyncio-dangling-task
    "RUF013",  # implicit-optional
    "RUF043",  # match-metacharacter-unescaped
    "UP036",   # outdated-version-block
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B007", "E402", "E731", "E741", "F841", "RUF012", "RUF015", "RUF059", "UP036"]
"src/**" = ["E402", "F841", "RUF059"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
check_untyped_defs = true
ignore_missing_imports = true
disable_error_code = [
    "assignment",
    "dict-item",
    "index",
    "method-assign",
    "no-any-return",
    "operator",
    "type-var",
    "union-attr",
    "valid-type",
    "var-annotated",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
