[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "precis-mcp"
version = "8.25.0"
description = "MCP server giving LLM agents a seven-verb API over papers, documents, code, personal state, patents, and cached web/Wolfram/YouTube tool calls — backed by PostgreSQL + pgvector"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
authors = [{ name = "Reto Stamm", email = "reto@retostamm.com" }]
keywords = [
    "mcp",
    "mcp-server",
    "model-context-protocol",
    "llm",
    "ai-agent",
    "agent-tools",
    "context-management",
    "token-optimization",
    "progressive-disclosure",
    "scientific-papers",
    "pdf",
    "markdown",
    "latex",
    "docx",
    "python",
    "code-navigation",
    "ast",
    "callgraph",
    "semantic-search",
    "pgvector",
    "postgres",
    "patents",
    "wolfram-alpha",
    "perplexity",
    "youtube-transcripts",
    "spaced-repetition",
    "claude",
    "cursor",
    "windsurf",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Text Processing :: Markup",
    "Topic :: Text Processing :: Markup :: LaTeX",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "mcp[cli]>=1.0",
    "psycopg[binary,pool]>=3.2",
    "pgvector>=0.3.0",
    # Numerics for the hierarchical-SOM cluster maps (clusterize worker
    # + precis-web /clusters grid). Already present transitively via the
    # embed/paper stacks; promoted to a direct dep so the always-on
    # system worker can import it without the heavy optional extras.
    "numpy>=1.24",
    "pydantic-settings>=2.0",
    "platformdirs>=4.0",
    "pyyaml>=6.0",
    # Mojibake repair on Marker / fitz output. Used both by the paper
    # ingest pipeline (vendored from acatome-extract in B3/B4) and the
    # patent ingest path. Direct dep so the package keeps resolving
    # without the optional ``[paper]`` extra installed.
    "ftfy>=6.3",
    # File-system watcher backing ``precis watch``. Used to be pulled
    # in transitively via acatome-extract[embeddings]; promoted to a
    # direct dep in B8 now that the watch loop lives in this package
    # (`precis/cli/watch.py`).
    "watchdog>=4.0",
    # Line editor backing ``precis repl``. Pure-Python; gives arrow-key
    # movement, persistent history, and tab completion of verb / param
    # names without depending on system libreadline (the slim runtime
    # image doesn't ship it, so the prior readline-based REPL silently
    # fell back to no-editing input()).
    "prompt-toolkit>=3.0",
    # Transitive-dep security floor — DO NOT add Pillow>=12.2.0 or
    # markdownify>=1.2 here without first bumping marker-pdf upstream.
    # As of 2026-05, marker-pdf 1.10.2 hard-caps Pillow<11.0.0 and
    # pulls markdownify<0.13.1; trying to pin Pillow>=12.2.0 here
    # makes precis-mcp[all] unresolvable. The pillow alerts (PSD,
    # FITS, PDF) and markdownify headline-DoS aren't reachable from
    # precis-mcp directly — paper ingestion sandboxes Marker behind
    # the ``[paper]`` extra. Tracked in dependabot.
    # LaTeX export determinism: unicode→LaTeX-command translation so
    # arbitrary scientific prose (≈, →, α, ™, …) never throws a
    # "missing character" on pdflatex. Pure-Python, tiny; also backs the
    # planned LaTeX→draft ingest parser.
    "pylatexenc>=2.10",
    # Abbreviation-aware sentence splitter for scientific prose; underpins
    # central-sentence extraction + replaces the naive ". " fallback in
    # text_chunker. Pure-Python rules engine (~50 KB, no model download),
    # but imported at module top by ``utils/sentences``, which the
    # verifier and chunker pull in on always-on (non-``[paper]``) paths —
    # so it's a direct dep, like numpy/ftfy/watchdog above. (Was in the
    # heavy ``[paper]`` extra, which broke host test collection.)
    "pysbd>=0.3.4",
    # Retry/backoff decorators (S2 + CrossRef + OpenAlex fetch paths).
    # Pure-Python, tiny, no compiled deps — BUT applied as ``@retry(...)``
    # decorators at module top in ``workers/fetch_oa.py``, which
    # ``cli.main`` imports eagerly (via ``cli.fetch_openalex``) to build
    # the arg parser. So *any* ``precis`` entrypoint — including the
    # torch-free ``serve-embeddings`` in its slim venv — imports it at
    # startup. Gating it behind ``[paper]`` crash-looped the embedder
    # service cluster-wide (ModuleNotFoundError: tenacity → serve exits
    # 1 → every node's embedder dead → the embed worker crash-loops).
    # Same reasoning as ``pysbd`` above: a top-of-module import on an
    # always-on path is a core dep, not an extra.
    "tenacity>=8.0",
]

[project.urls]
Homepage = "https://github.com/retospect/precis-mcp"
Repository = "https://github.com/retospect/precis-mcp"

[project.optional-dependencies]
# The embedder backend — ``sentence-transformers`` (and, transitively,
# ``torch``). Split out of ``paper`` (ADR 0020/0021) so the torch-free
# serve / worker images can omit it and reach the model over HTTP via
# ``RemoteEmbedder`` instead. The embedder *service* image installs this
# extra; single-process PyPI installs that want an in-process model get
# it via ``[all]`` or an explicit ``[embed]``.
#
# Without an embedder (no ``[embed]`` and no remote URL) the ``search()``
# verb on every embedder-backed kind crashes with -32603 even though
# tools/list advertises it (MCP critic CRITICAL). ``[all]`` includes
# ``embed`` so the single-process install keeps working.
embed = ["sentence-transformers>=3.0"]
# asa — the Discord bridge that runs Asa as a Claude Code agent backed by
# precis (folded in from the standalone asa-bot repo). A sibling package
# (`src/asa_bot`) + the `asa-bot` entry point, like `precis_web` + `precis
# web`. Deliberately NOT in `[all]`: asa is an operational daemon, not a
# precis capability, and its only extra deps are discord.py + aiohttp
# (psycopg + pyyaml are already core). asa keeps talking to `precis serve`
# over stdio at runtime — the merge shares the code, not the process
# boundary. Install target: `precis-mcp[asa]` on the asa host (melchior).
asa = ["discord.py>=2.4", "aiohttp>=3.9"]
# tts — local text-to-speech for the audio-export renderer (voice drafts +
# the morning brief). Kokoro (per-language native voices, Apache) via
# kokoro-onnx; soundfile for WAV I/O; numpy rides along. Heavy + host-specific
# (installed on the inference node with the model files), so it's opt-in and
# the engine import is lazy — non-tts builds never load it.
tts = ["kokoro-onnx>=0.4", "soundfile>=0.12"]
# Paper ingest — PDF → layout (marker-pdf) → chunks + metadata
# lookup (CrossRef / Semantic Scholar). The full pipeline lives in
# :mod:`precis.ingest` as of the v7 rewrite (was previously farmed out
# to ``acatome-extract``).
#
# ``marker-pdf`` is gated on ``sys_platform != 'win32'`` because
# Marker's surya / torch stack doesn't support Windows; on Windows
# the install resolves but PDF layout extraction will error out at
# call time with a clear ``ModuleNotFoundError: marker``.
#
# ⚠️ SECURITY PIN — DO NOT hand-bump ``transformers`` to fix Dependabot #44
# (transformers <5.3.0 RCE, high). ``marker-pdf`` (≤1.10.2, the PDF OCR/layout
# toolkit below) hard-caps ``transformers<5.0.0``, so ``>=5.3.0`` is
# **unsatisfiable** — a lockfile-only bump WILL fail to resolve. The alert is
# knowingly accepted (precis only loads the trusted local bge-m3 embedder, never
# ``trust_remote_code`` / a user model path). Full risk note + recheck date:
# SECURITY.md "Known / accepted open alerts" and OPEN-ITEMS.md "Snoozed —
# blocked upstream". Unblocks only when marker-pdf lifts its transformers<5 cap.
paper = [
    "marker-pdf>=1.0; sys_platform != 'win32'",
    "pymupdf>=1.24.10",     # ``fitz`` — page-level PDF text + metadata.
                            # >=1.24.10 picks up the heap-corruption
                            # fixes shipped in the 1.24 maintenance
                            # series; agent-supplied PDFs reach
                            # fitz.open via the OA cascade so we keep
                            # the floor tight.
    "rapidfuzz>=3.0",       # title/author fuzzy match in verify_metadata
    "habanero>=2.0",        # CrossRef REST client
    "semanticscholar>=0.8", # Semantic Scholar REST client
    # NOTE: ``tenacity`` moved to the core ``dependencies`` block — its
    # ``@retry`` decorators run at import of ``workers/fetch_oa`` (on the
    # always-on ``cli.main`` parser-build path), so gating it here broke
    # the torch-free ``serve-embeddings`` venv. See the core-deps note.
    # NOTE: ``pysbd`` moved to the core ``dependencies`` block — it is a
    # pure-Python ~50 KB rules engine imported at module top by
    # ``utils/sentences`` (verifier + chunker fallback), so gating it
    # behind ``[paper]`` made non-paper test collection ImportError.
    # NOTE: ``sentence-transformers`` is NOT here — it moved to the
    # ``embed`` extra (ADR 0021). Marker still pulls ``torch`` for surya,
    # so the ingest image is heavy regardless; serve / worker, which omit
    # both ``paper`` and ``embed``, are the ones that go torch-free.
]
# DOCX file handler. ``resvg-py`` rasterises SVG/canvas figures to PNG for
# ``add_picture`` (ADR 0057 slice 4) — a self-contained Rust wheel, no cairo.
docx = ["python-docx>=1.1", "lxml>=5.0", "latex2mathml>=3.77", "resvg-py>=0.1"]
# LaTeX file handler. ``resvg-py`` rasterises SVG/canvas figures to PNG for
# ``\includegraphics`` (ADR 0057 slice 4).
tex = ["lxml>=5.0", "resvg-py>=0.1"]
# Local calculator (sympy).
calc = ["sympy>=1.12"]
# DFT / atomistic structures (ADR 0043). ASE for CIF I/O + symmetry (spglib).
# POSCAR/extXYZ export and the whole probe loop need NONE of this (pure, core).
dft = ["ase>=3.22", "spglib>=2.1"]
# The rented MLIP relax rung (ADR 0043 §9, `fidelity='ml'`): ASE + a machine-
# learned potential (MACE-MP-0). torch is heavy — gated out of the default
# install; rung-0 `clean` geometry repair needs none of this. GPAW/DFT
# (`dft-gpaw`) runs as a cluster job, not inline.
dft-ml = ["ase>=3.22", "mace-torch>=0.3"]
# Declarative matplotlib plot renderer.
plot = ["matplotlib>=3.7", "pydantic>=2.0"]
# Paid web tools (perplexity / wolfram / youtube transcripts).
external = [
    "wolframalpha>=5.0",
    "youtube-transcript-api>=1.0",
    "httpx>=0.27",
    "trafilatura>=1.6",  # web page → markdown extractor
    "feedparser>=6.0",   # RSS/Atom parsing for the news kind / news_poll
]
# Patent kind — EPO Open Patent Services. Free fair-use, OAuth2.
patent = [
    "python-epo-ops-client>=4.0",
    "lxml>=5.0",
]
# Web surface — the precis_web FastAPI service (Tasks / Papers /
# Console / Status tabs). Server-rendered (Jinja + HTMX from CDN), so
# the only runtime deps are the framework + template + form parser.
# See docs/design/precis-web-build.md.
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]
# CAD export (ADR 0041 §10). Two tiers, both downstream of the design
# loop (the kernel + probes need neither). ``cad-export`` is the
# lightweight printable path: ``manifold3d`` (the same robust CSG kernel
# OpenSCAD uses) does in-process booleans on tessellated primitives, then
# precis hand-writes STL (binary) + 3MF (zip/XML) — no external app, no
# trimesh. ``cad-step`` adds the OpenCASCADE B-rep kernel for *exact* STEP
# interchange (which a mesh kernel fundamentally cannot emit). We import
# the **raw** ``OCP`` binding, not ``build123d``, so the dependency is the
# bare OCCT wheel (``cadquery-ocp-novtk`` — pip-installable, bundles the
# OCCT libs, no system OpenCASCADE / conda / VTK) rather than build123d's
# whole jupyter/ezdxf/svg tree. Heavy (~200 MB of bundled libs), so kept
# out of ``[all]`` like the torch-gated paths.
cad-export = ["manifold3d>=2.5"]
cad-step = ["cadquery-ocp-novtk>=7.8"]
# Electronics / PCB (ADR 0042 §5). Flow-B footprint resolution: LCSC part →
# KiCad footprint (pads + pin-name map) via ``easyeda2kicad``, cached in
# ``part_footprints``. Network-bound + optional — like the cad tiers it stays
# out of ``[all]`` (the design / eyes / placement / export loop needs none of
# it; only real-pad-geometry footprint conversion does). The Freerouting
# autorouter and kicad-cli (``precis.pcb.route`` / gerber export) are external
# binaries, gated at call time — not Python deps, so not listed here.
pcb = ["easyeda2kicad>=0.8"]
# EDGAR kind — SEC filings. Free, key-free (descriptive User-Agent only).
# Needs only httpx (the shared outbound-HTTP seam); the filing parser is
# stdlib. No new top-level dependency.
edgar = ["httpx>=0.27"]
# Chemistry / protein tool-pack (ADR 0056; docs/design/chem-tools-integration.md).
# The `route` kind + `retrosynth` job ship in the in-repo `precis_chem` plugin
# (registered via the entry points below) and are gate-testable with the pure
# in-process stub engine — so this extra carries NO deps for slice 1. The real
# planners (AiZynthFinder / ASKCOS) run in **containers** on the compute node
# (their heavy deps live in the image, not here). rdkit is the only in-process
# chem dep on the horizon — SMILES canonicalization at LinChemIn normalization
# (slice 2) — and lands here when that slice does. Kept out of `[all]` (heavy,
# host-specific, and unused until a node actually runs an engine).
chem = ["rdkit>=2023.9"]
# mermaid — the `mermaid` diagram kind (ADR 0057). Pure-Python and
# self-contained: `mermaidx` runs the real mermaid.js in an embedded QuickJS
# engine and rasterizes with resvg — no Node, no Chromium, no container. The
# engine is lazy-imported (only `MermaidLang.parse_error`/`render` touch it)
# and the kind ships dark behind `PRECIS_MERMAID_ENABLED`, so non-mermaid
# builds never load it. Kept out of `[all]` until the dev/CI image bakes it —
# the mermaid tests `pytest.importorskip('mermaidx')`, so the gate stays green
# without it (mirrors the `anki` dark-extra pattern).
mermaid = ["mermaidx>=0.8"]
all = ["precis-mcp[embed,paper,docx,tex,calc,plot,external,patent,edgar,web,cad-export,mermaid]"]

[project.scripts]
precis = "precis.cli:main"
asa-bot = "asa_bot.__main__:main"

# Core kinds use an in-tree `BUILTINS` registry (V2 dropped entry-point
# discovery for them). The three groups below are the THIRD-PARTY / plugin
# seam (precis.dispatch._load_plugins + Migrator.discover_sources +
# workers.job_types._discover_job_type_plugins) — a tool-pack snaps in
# through them with zero core churn (ADR 0056). `precis_chem` is the
# first-party chem tool-pack, bundled in this repo but loaded as a plugin:
# the `route` kind, the `retrosynth` job_type, and its migrations
# (namespace `precis_chem`). It ships dark behind PRECIS_CHEM_ENABLED.
# `precis_bio` is its protein sibling (slice 4): the `protein` kind, the
# `fold` job_type (AlphaFold3 on the GPU node), and its migrations
# (namespace `precis_bio`), dark behind PRECIS_BIO_ENABLED.
[project.entry-points."precis.handlers"]
route = "precis_chem.route:RouteHandler"
protein = "precis_bio.protein:ProteinHandler"

[project.entry-points."precis.job_types"]
retrosynth = "precis_chem.jobs:RETROSYNTH_SPEC"
fold = "precis_bio.jobs:FOLD_SPEC"

[project.entry-points."precis.migrations"]
precis_chem = "precis_chem.migrations"
precis_bio = "precis_bio.migrations"

[dependency-groups]
dev = [
    "pytest>=8",
    # Parallel test execution. The suite is CPU-bound and single-threaded
    # without this; ``addopts = -n auto`` (below) fans it across cores. Safe
    # because each xdist worker is its own process and so runs the
    # session-scoped ``_initialise_test_db`` fixture independently — every
    # worker gets its OWN ``precis_test_<uuid>`` clone, so the per-test
    # TRUNCATE isolation never races across workers (see tests/conftest.py).
    "pytest-xdist>=3.6",
    "ruff>=0.11",
    "mypy>=1.15",
    "pre-commit>=4",
    # FastAPI's TestClient (starlette) needs httpx; used by the
    # precis_web route tests under tests/precis_web/.
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src/precis", "src/precis_web", "src/asa_bot", "src/precis_chem", "src/precis_bio"]

# Note: hatchling ≥ 1.20 already includes non-Python files inside a
# packaged directory (Jinja .j2 templates under
# ``src/precis_web/templates`` ship automatically with the
# ``src/precis_web`` package). Earlier versions of this file carried
# a ``[tool.hatch.build.targets.wheel.force-include]`` block that
# duplicated the templates path; the newer hatchling detects the
# duplicate and refuses to build with
# "A second file is being added to the wheel archive at the same
# path". The block was deleted in this commit.
#
# Workspace templates (LaTeX / Markdown scaffolds copied verbatim
# into a freshly-initialized workspace by
# ``precis.utils.workspace.ensure_initialized``) ship as package
# data under ``src/precis/data/workspace_templates/``. The ``.tex``
# / ``.md`` files come along automatically, but hatchling skips
# dotfiles by default — so we widen the artifact pattern below to
# include them. Without this, ``importlib.resources`` on a wheel
# install finds ``main.tex`` but not ``.gitignore`` and the
# initializer silently writes a workspace with no ignore file.

[tool.hatch.build]
artifacts = [
    "src/precis/data/workspace_templates/**/.gitignore",
]

# Source distribution includes docker/ so packagers / downstream image
# builders get the Dockerfile and entrypoint alongside the Python source
# (`pip download --no-binary precis-mcp` lands a tarball with both).
# tests/ ships so downstream can verify; docs/ ships so the ADRs travel
# with the release. The wheel above stays src/precis only — Dockerfiles
# aren't useful inside an installed package and would just bloat
# every `pip install`.
[tool.hatch.build.targets.sdist]
include = [
  "src/",
  "tests/",
  "docker/",
  "docs/",
  "scripts/",
  "*.md",
  "*.toml",
  "LICENSE",
  "CITATION.cff",
]

[tool.ruff]
target-version = "py311"
line-length = 88
# Don't descend into Claude Code worktrees — sibling sessions live under
# .claude/worktrees/<name>/ (nested copies of the repo) and would
# otherwise be scanned twice and trip the format/lint gate on unrelated
# in-flight work.
extend-exclude = [".claude"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "B008",    # function-call-in-default-argument (typer pattern)
    "E501",    # line-too-long (formatter handles what it can)
    "E741",    # ambiguous-variable-name
    "RUF001",  # ambiguous-unicode-character-string
    "RUF002",  # ambiguous-unicode-character-docstring
    "RUF003",  # ambiguous-unicode-character-comment
    "RUF012",  # mutable-class-default (SQLAlchemy/Pydantic models)
    "SIM102",  # collapsible-if
    "SIM103",  # needless-bool
    "SIM105",  # suppressible-exception
    "SIM108",  # if-else-block-instead-of-if-exp
    "SIM110",  # reimplemented-builtin
    "SIM117",  # multiple-with-statements
    "B007",    # unused-loop-control-variable
    "B905",    # zip-without-explicit-strict
    "RUF005",  # collection-literal-concatenation
    "RUF006",  # asyncio-dangling-task
    "RUF013",  # implicit-optional
    "RUF043",  # match-metacharacter-unescaped
    "UP036",   # outdated-version-block
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B007", "E402", "E731", "E741", "F841", "RUF012", "RUF015", "RUF059", "UP036"]
"src/**" = ["E402", "RUF059"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
check_untyped_defs = true
ignore_missing_imports = true
# Incrementally re-enabling these (code-review Phase 4.1). Already
# burned down + removed: no-any-return, valid-type (were already clean),
# dict-item, method-assign, var-annotated. Remaining (error counts at
# last measure): operator (11), type-var (14), assignment (26),
# index (35), union-attr (98) — re-enable one at a time as they're fixed.
disable_error_code = [
    "assignment",
    "index",
    "operator",
    "type-var",
    "union-attr",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Fan the suite across cores. It is CPU-bound and was single-threaded
# (~36s host / minutes in the container gate); -n auto roughly halves
# wall-clock on a multi-core box. Each worker is a separate process and
# gets its own per-session DB clone (see tests/conftest.py), so DB
# isolation holds. For a clean single-test debug session
# (pdb / -s output), override with ``-n0``.
addopts = "-n auto"
